Added some comments

--- a/scalability_plotting.ipynb
+++ b/scalability_plotting.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,9 +270,11 @@
     }
    ],
    "source": [
+    "# Plotting strong scalability results. Execution time and efficiency\n",
     "fig, axes = plt.subplots(1, 2, figsize=(10, 4), sharex=True)\n",
     "fig.suptitle(\"Strong scalability results\")\n",
     "\n",
+    "# Subplot for execution time for aggregation time and total time vs number of nodes\n",
     "axes[0].plot(strong_df[\"num_of_workers\"], strong_df[\"aggregation_time\"], label = \"aggregation\", marker='o');\n",
     "axes[0].plot(strong_df[\"num_of_workers\"], strong_df[\"total_time\"], label = \"total spark job\", marker='o');\n",
     "axes[0].set_xlabel(\"Number of nodes\");\n",
@@ -280,6 +282,7 @@
     "axes[0].set_title(\"Execution time vs. number of nodes\")\n",
     "axes[0].legend()\n",
     "\n",
+    "# Subplot for aggregation and total job efficiency vs number of nodes\n",
     "axes[1].plot(strong_df[\"num_of_workers\"], strong_df[\"aggregation_efficiency\"], label = \"aggregation\", marker = 'o')\n",
     "axes[1].plot(strong_df[\"num_of_workers\"], strong_df[\"total_time_efficiency\"], label = \"total spark job\", marker = 'o')\n",
     "axes[1].set_xlabel(\"Number of nodes\")\n",
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +314,11 @@
     }
    ],
    "source": [
+    "# Plots for weak scalability results\n",
     "fig, axes = plt.subplots(1, 2, figsize=(10, 4), sharex=True)\n",
     "fig.suptitle(\"Weak scalability results\")\n",
     "\n",
+    "# Subplots for execution time vs number of nodes\n",
     "axes[0].plot(weak_df[\"num_of_workers\"], weak_df[\"aggregation_time\"], label = \"aggregation\", marker = 'o');\n",
     "axes[0].plot(weak_df[\"num_of_workers\"], weak_df[\"total_time\"], label = \"total spark job\", marker = 'o');\n",
     "axes[0].set_xlabel(\"Number of nodes\");\n",
@@ -321,6 +326,7 @@
     "axes[0].set_title(\"Execution time vs. number of nodes\")\n",
     "axes[0].legend()\n",
     "\n",
+    "# Subplots for speedup vs number of nodes\n",
     "axes[1].plot(weak_df[\"num_of_workers\"], weak_df[\"aggregation_speedup\"], label = \"aggregation\", marker = 'o')\n",
     "axes[1].plot(weak_df[\"num_of_workers\"], weak_df[\"total_time_speedup\"], label = \"total spark job\", marker = 'o')\n",
     "axes[1].set_xlabel(\"Number of nodes\")\n",
